# bentoproxy

./: .gitignore  Cargo.toml  README.md
examples/: device_simulator.rs
migrations/: 001_initial.sql
src/: auth.rs  db.rs  device_ws.rs  http_proxy.rs  lib.rs  main.rs  mux.rs  socks5.rs
src/web/: handlers.rs  models.rs  routes.rs
templates/: base.html  dashboard_owner.html  dashboard_user.html  index.html  login.html  register.html
