[package]
name = "bentoproxy-orchestrator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["BentoProxy Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1.1"

# Authentication & crypto
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
clap = { version = "4", features = ["derive"] }

# Protocol
bentoproxy-protocol = { path = "../protocol" }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
